# HuffmanCoding

./: CMakeLists.txt
Compresser/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  FileUtil.cpp  FileUtil.h
Console/: main.cpp
Testing/: ConsoleUtil  testing_util  testing_util.cpp
